<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgetPassActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundframe"
        android:layout_alignParentTop="true">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/header" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/forget"
            android:textColor="@color/purpulecolor"
            android:textSize="30dp"
            android:fontFamily="@font/adlamdisplay"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="@string/enter_email"
            android:textColor="@color/pinkcolor"
            android:textSize="16dp"
            android:fontFamily="@font/itckrstin"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:hint="Email"
            app:counterMaxLength="15"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedtext"
                android:inputType="textEmailAddress"
                android:textSize="16dp"
                android:fontFamily="@font/adlamdisplay"
                android:gravity="center"
                android:textColor="@color/redcolor"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/enter_phone"
            android:textColor="@color/pinkcolor"
            android:textSize="16dp"
            android:fontFamily="@font/itckrstin"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:hint="Phone"
            app:counterMaxLength="15"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedtext"
                android:inputType="phone"
                android:textSize="16dp"
                android:fontFamily="@font/adlamdisplay"
                android:gravity="center"
                android:textColor="@color/redcolor"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_login"
            android:textColor="@color/purpulecolor"
            android:textSize="16dp"
            android:fontFamily="@font/adlamdisplay"
            android:gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_red"
            android:padding="8dp"
            android:text="@string/submit"
            android:fontFamily="@font/adlamdisplay"
            android:textColor="@color/yellow2"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-85dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/tail" />
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>