<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.AdminActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundframe"
        android:layout_alignParentTop="true">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/header" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/admin"
            android:textColor="@color/purpulecolor"
            android:textSize="30dp"
            android:fontFamily="@font/adlamdisplay"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgEditProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/edit_profile"/>
            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/logout"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerInParent="true"
        android:background="@drawable/roundedborder"

        android:layout_margin="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgManageDoctors"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/manage_doctors"/>
            <TextView
                android:id="@+id/txtManageDoctors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/manage_doctors"
                android:layout_marginLeft="20dp"
                android:textColor="@color/purpulecolor"
                android:textSize="20dp"
                android:fontFamily="@font/itckrstin"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgManageParents"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/manage_parents"/>
            <TextView
                android:id="@+id/txtManageParents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/manage_parents"
                android:textColor="@color/purpulecolor"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/itckrstin"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgManageGroups"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/manage_groups"/>
            <TextView
                android:id="@+id/txtManageGroups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/manage_groups"
                android:textColor="@color/purpulecolor"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/itckrstin"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgViewReports"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/reports"/>
            <TextView
                android:id="@+id/txtViewReports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/view_reports"
                android:textColor="@color/purpulecolor"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/itckrstin"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-85dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/tail" />


</RelativeLayout>