<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".parent.UpdateChildActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundframe"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/imgBack"
            android:src="@drawable/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/header" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/update_child"
            android:textColor="@color/purpulecolor"
            android:textSize="25dp"
            android:fontFamily="@font/adlamdisplay"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgEditProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/edit_profile"/>
            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/logout"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textColor="@color/pinkcolor"
            android:textSize="16dp"
            android:fontFamily="@font/itckrstin"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="Name"
            app:counterMaxLength="15"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedtext"
                android:inputType="text"
                android:textSize="16dp"
                android:fontFamily="@font/adlamdisplay"
                android:gravity="center"
                android:textColor="@color/redcolor"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/age"
            android:textColor="@color/pinkcolor"
            android:textSize="16dp"
            android:fontFamily="@font/itckrstin"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="Age"
            app:counterMaxLength="15"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedtext"
                android:inputType="number"
                android:textSize="16dp"
                android:fontFamily="@font/adlamdisplay"
                android:gravity="center"
                android:textColor="@color/redcolor"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/pass_data"
            android:textColor="@color/pinkcolor"
            android:textSize="16dp"
            android:fontFamily="@font/itckrstin"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:passwordToggleEnabled="true"
            android:hint="Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedtext"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="16dp"
                android:fontFamily="@font/adlamdisplay"
                android:gravity="center"
                android:textColor="@color/redcolor"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/child_sex"
            android:textColor="@color/pinkcolor"
            android:textSize="16dp"
            android:fontFamily="@font/itckrstin"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/spinSex"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/roundedtext"
            android:layout_marginHorizontal="30dp"
            android:entries="@array/sex"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_red"
            android:padding="8dp"
            android:text="@string/save"
            android:fontFamily="@font/adlamdisplay"
            android:textColor="@color/yellow2"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-85dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/tail" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible" />


</RelativeLayout>