<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".parent.UploadDrawingParentActivity">


    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundframe"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/imgBack"
            android:src="@drawable/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/header" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/upload_drawing"
            android:textColor="@color/purpulecolor"
            android:textSize="25dp"
            android:fontFamily="@font/adlamdisplay"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgEditProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/edit_profile"/>
            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/logout"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerInParent="true"
        android:background="@drawable/roundedborder"

        android:layout_margin="20dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgDraw"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/view_drawings"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_yellow"
            android:padding="8dp"
            android:text="@string/choose"
            android:fontFamily="@font/itckrstin"
            android:textColor="@color/purpulecolor"
            android:textSize="18sp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_red"
            android:padding="8dp"
            android:text="@string/upload"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/itckrstin"
            android:textColor="@color/yellow2"
            android:textSize="18sp"
            android:textStyle="bold" />



    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-85dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/tail" />

</RelativeLayout>